--- a/src/app/dashboard/recyclebin/recyclebin.component.html
+++ b/src/app/dashboard/recyclebin/recyclebin.component.html
@@ -1,4 +1,5 @@
 <div class="trashtable">
+  <h1 style="color:white ;">Trash</h1>
   <table class="table table-striped">
     <thead>
       <tr style="color:white;">
