--- a/src/app/dashboard/settings/settings.component.html
+++ b/src/app/dashboard/settings/settings.component.html
@@ -14,6 +14,6 @@
         </button>
         </li>
         <li routerLink="/home">About</li>
-        <li>Terms & Conditions</li>
+        <li routerLink="/terms">Terms & Conditions</li>
     </ul>
 </div>
