--- a/src/app/privacy/alldocuments/alldocuments.component.html
+++ b/src/app/privacy/alldocuments/alldocuments.component.html
@@ -1,4 +1,5 @@
 <div class="trashtable">
+    <h1 style="color:white ;">All Documents</h1>
     <div class="photos" *ngIf="photos.length > 0">
         <h2 style="text-align:center;">Available Files</h2>
         <br><br><br>
