--- a/src/app/privacy/define-user/define-user.component.html
+++ b/src/app/privacy/define-user/define-user.component.html
@@ -1,4 +1,5 @@
 <div class="trashtable">
+    <h1 style="color:white ;">Define Users</h1>
     <table>
         <tr>
             <th>Employee Id</th>
